# Speaker_Diarization

./: .gitignore  README.md  TheFutureMarkZuckerbergIsTryingToBuild.txt  Transcribe_output_file.txt  back_up_plan.py  main.py  pyproject.toml  speaker_diarization_transcription.py  test_speaker_diarization_transcription.py  test_transcription_output.txt  wishper_tesrt.py
output/: test_transcription_output.txt
src/: speaker_diarization_transcription.py
