[project]
name = "speaker-diarization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "funasr>=1.2.6",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "whisper>=1.1.10",
    "whisperx>=3.3.2",
]
